# gel-point

./: CHANGES.md  README.md  package.json
ai-puzzle-gen/: README.md  index.ts  main.py  package.json
ai-puzzle-gen/puzzle_model/: model.json
app/: bun.lockb  eslint.config.ts  index.html  package.json  tailwind.config.js  todo.md  vite.config.ts
app/src/: App.vue  main.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/assets/: puzzles.data  puzzles.json  puzzles.txt  startup.js  words.data  words.txt
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ctx_macro_offload.rs  data.rs  errors.rs  lib.rs  state.rs
app/src/assets/: index.css
app/src/components/: Actions.vue  BuiltWordIndicator.vue  BuyButton.vue  BuySelector.vue  FadeTransition.vue  GhostButton.vue  Letter.vue  PopoutMenu.vue  PopoutMenuItem.vue  PuzzleGrid.vue  ThemeSelector.vue  WinMessage.vue  WordBuilder.vue
app/src/composables/: event-listener.composable.ts  interval.composable.ts  letter-alignment.composable.ts  local-storage.composable.ts  puzzle-manager.composable.ts  puzzle.composable.ts  reactive-sizes.composable.ts  tauri-store.composable.ts  theme.composable.ts  window-size.composable.ts  words.composable.ts
app/src/services/: puzzles.service.ts  words.service.ts
app/src/util/: game-data.util.ts  index.ts  motds.util.ts
public/: fair-puzzle-words.txt  puzzle.json  puzzles.json  words-filtered.txt
puzzle-creator/src/: App.vue
server/: Cargo.toml
server/src/: main.rs
src/: App.vue
src/components/: Letter.vue  PuzzleGrid.vue  WordBuilder.vue
tools/: ai-gen-prompt.md  filter-words.js  filtered-words.txt  progress.manual.txt  puzzle-builder.ts
tools/ai-puzzle-gen/: main.py
tools/ios-webkit-tests/: index.html
tools/puzzle-visualizer/: README.md  bun.lockb  package.json
tools/puzzle-visualizer/src/: App.vue
tools/puzzles/: ai-gen-prompt.md  puzzle-builder.ts
tools/puzzles/wordscapes-levels-dump/: extract.js  processed.json
tools/r-printer/: Cargo.toml
tools/r-printer/src/: main.rs
tools/word-lists/: filter-frequency.ts  filter-words.js  filter-words.ts  progress.txt  word-filter.html
tools/wordscapes-levels-dump/: extract.js  puzzles.txt
