cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "gel-point"
version = "0.1.4"
authors = ["Cooper Hanessian"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.0.5"

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2.2.5", features = [] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-haptics = "2.2.3"
tauri-plugin-http = "2.3.0"
tauri-plugin-log = "2.2.1"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["fs"] }
anyhow = "1.0.95"

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"

# https://v2.tauri.app/concept/size/
[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
